# jenkinstesting

./: Dockerfile  Jenkinsfile  README.md  compose.yaml  pyproject.toml  requirements.txt  setup.py  testing2.txt  testing3.txt
src/: data_processing.py  main.py  models.py  utils.py
